# lomos-api2

./: .dockerignore  .env.sample  .gitignore  Dockerfile  LICENSE  NOTICE  README.md  pyproject.toml  requirements-dev.txt  wsgi.py
k8s/: lomos-api2.yml
lomos_api2/: __init__.py  default_settings.py  lomos_api2.py  views_summary.py
tests/integration/: test_i_views_summary.py
tests/unit/: conftest.py  test_lomos_api2.py  test_views_summary.py
